<resources>
    <string name="app_name">AppListaCurso</string>
    <string name="txt_titulo">Aplicativo Lista VIP Curso Android</string>
    <string name="txt_hint_edit_primeiro_nome">Primeiro nome</string>
    <string name="txt_hint_edit_sobrenome">Sobrenome</string>
    <string name="txt_hint_edit_nome_do_curso_desejado">Nome do curso desejado</string>
    <string name="txt_hint_edit_telefone_contato">Telefone de contato</string>
    <string name="txt_button_limpar">LIMPAR</string>
    <string name="txt_button_salvar">SALVAR</string>
    <string name="txt_button_finalizar">FINALIZAR</string>



</resources>