<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/editTitulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_titulo"
        android:textAlignment="center"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.048"
        tools:ignore="HardcodedText" />

    <EditText
        android:id="@+id/editPrimeiroNome"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/txt_hint_edit_primeiro_nome"
        android:inputType="text"
        android:minHeight="48dp"
        android:textColorHint="#black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTitulo"
        tools:ignore="VisualLintTextFieldSize" />

    <EditText
        android:id="@+id/editSobreNome"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:ems="10"
        android:hint="@string/txt_hint_edit_sobrenome"
        android:importantForAutofill="no"
        android:inputType="text"
        android:minHeight="48dp"
        android:textColorHint="#black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editPrimeiroNome"
        tools:ignore="DuplicateClickableBoundsCheck,VisualLintTextFieldSize,VisualLintOverlap" />


    <EditText
        android:id="@+id/editNomeCurso"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:ems="10"
        android:hint="@string/txt_hint_edit_nome_do_curso_desejado"
        android:importantForAutofill="no"
        android:inputType="text"
        android:minHeight="48dp"
        android:textColorHint="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editSobreNome"
        tools:ignore="UnknownId,VisualLintTextFieldSize" />

    <EditText
        android:id="@+id/edittelefonedecontato"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textColorHint="@color/black"
        android:layout_margin="16dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="48dp"
        android:layout_marginBottom="48dp"
        android:ems="10"
        android:hint="@string/txt_hint_edit_telefone_contato"
        android:importantForAutofill="no"
        android:inputType="text"
        android:minHeight="48dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editNomeCurso"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="VisualLintTextFieldSize" />

    <Button
        android:id="@+id/btnLimpar"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="56dp"
        android:layout_marginTop="48dp"
        android:background="@color/corbotoes"
        android:text="@string/txt_button_limpar"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edittelefonedecontato" />

    <Button
        android:id="@+id/btnSalvar"
        android:layout_width="100dp"
        android:layout_height="48dp"
        android:layout_margin="48dp"
        android:layout_marginHorizontal="48dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="56dp"
        android:background="@color/corbotoes"
        android:textColor="@color/black"
        android:text="@string/txt_button_salvar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edittelefonedecontato"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/btnFinalizar"
        android:layout_width="314dp"
        android:layout_height="55dp"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="228dp"
        android:background="@color/corbotoes"
        android:text="@string/txt_button_finalizar"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.395"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>